deploy/kubernetes/bg.yaml
apiVersion: v1
kind: Service
metadata:
  name: bg
  labels:
    app: bg
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: bg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bg
  labels:
    app: bg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bg
  template:
    metadata:
      labels:
        app: bg
    spec:
      containers:
      - name: bg
        image: ghcr.io/huangyingting/bg:latest
        ports:
        - name: http
          containerPort: 8000
