deploy/kubernetes/bi.yaml
apiVersion: v1
kind: Service
metadata:
  name: bi
  labels:
    app: bi
spec:
  ports:
  - name: http
    port: 8001
    targetPort: 8001
  selector:
    app: bi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi
  labels:
    app: bi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bi
  template:
    metadata:
      labels:
        app: bi
    spec:
      containers:
      - name: be
        image: ghcr.io/huangyingting/bi:latest
        ports:
        - name: http
          containerPort: 8002
