deploy/kubernetes/bs.yaml
apiVersion: v1
kind: Service
metadata:
  name: bs
  labels:
    app: bs
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: bs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bs
  labels:
    app: bs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bs
  template:
    metadata:
      labels:
        app: bs
    spec:
      containers:
      - name: bs
        image: ghcr.io/huangyingting/bs:master
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: bs
spec:
  rules:
  - host: aliases.biz
    http:
      paths:
      - backend:
          service:
            name: bs
            port:
              number: 8080
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - aliases.biz
    secretName: bs-tls
