deploy/kubernetes/gowitness.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowitness
  labels:
    app: gowitness
spec:
  ports:
  - name: http
    port: 7171
    targetPort: 7171
  selector:
    app: gowitness
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowitness
  labels:
    app: gowitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gowitness
  template:
    metadata:
      labels:
        app: gowitness
    spec:
      containers:
      - name: gowitness
        image: huangyingting/gowitness:latest
        command: ["gowitness"]
        args: ["server", "--address", "0.0.0.0:7171", "-X", "800", "-Y", "600"]
        ports:
        - name: http
          containerPort: 7171
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  labels:
    app: gowitness
  name: gowitness
spec:
  rules:
  - host: gowitness.aliases.biz
    http:
      paths:
      - backend:
          service:
            name: gowitness
            port:
              number: 7171
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - gowitness.aliases.biz
    secretName: gowitness-tls
